--- a/.github/workflows/branch_test_push.yml
+++ b/.github/workflows/branch_test_push.yml
@@ -1,8 +1,6 @@
 name: Branch Test Push
-on:
-  push:
-    branches:
-      - 'master'
+on: [push, pull_request]
+
 jobs:
   test:
     name: Test
@@ -21,17 +19,4 @@ jobs:
           GOFLAGS: -mod=vendor
       - name: Upload Coverage to CodeCov
         run: curl -s https://codecov.io/bash | bash -s -- -t ${{secrets.CODECOV_TOKEN}} -f ./coverage.txt
-  build_and_push:
-    name: Build and Push Images
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - name: Docker Login
-        run: |
-          echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin;
-      - name: Build, Tag and Push
-        run: |
-          docker build . --file ./Dockerfile-source -t "cflynnus/github-action-til-autoformat-readme:latest";
-          docker push "cflynnus/github-action-til-autoformat-readme:latest";
+
