Table presentation wip

--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,9 @@ author: 'Casey Flynn <cflynn07>'
 icon: 'align-left'
 color: 'purple'
 inputs:
+  presentation:
+    description: 'TBA'
+    required: true
   description:
     description: 'Description text block featured at the top of your README.md'
     required: false
